[package]
name = "libcef-sys"
version = "130.1.16"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>", "csmoe@msn.com" ]
description = "cef-rs sys crate"
repository = "https://github.com/csmoe/cef-rs"

[lib]
name = "cef_sys"

[features]
dox = []

[package.metadata.docs.rs]
features = [ "dox" ]

[dependencies]

[dev-dependencies]
winit = "0.28"

[build-dependencies]
build-rs = "0"
bindgen = "0"

