[package]
name = "libcef-sys"
version = "130.1.16"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>", "csmoe@msn.com" ]
description = "cef-rs sys crate"
repository = "https://github.com/csmoe/cef-rs"
build = "build.rs"

[lib]
name = "cef_sys"

[features]
dox = []

[package.metadata.docs.rs]
features = [ "dox" ]

[package.metadata.cef]
version = "130.1.16+g5a7e5ed"
chromium_version = "130.0.6723.117"

[dependencies]

[dev-dependencies]
winit = "0.28"

[build-dependencies]
build-rs = "0"
bindgen = "0"
cargo_metadata = "0"
ureq = "2"
tar = "0"
bzip2 = "0"
serde_json = "1"
sha1_smol = "1"
