[package]
name = "libcef-sys"
version = "130.1.16"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>", "csmoe <csmoe@msn.com>" ]
description = "cef-rs sys crate"
repository = "https://github.com/csmoe/cef-rs"
build = "build.rs"

[lib]
name = "cef_sys"

[features]
dox = []

[package.metadata.docs.rs]
features = [ "dox" ]

[package.metadata]
cef_version = "130.1.16+g5a7e5ed+chromium-130.0.6723.117"

[dependencies]

[dev-dependencies]
winit = "0.28"

[build-dependencies]
build-rs = "0"
